--- a/merch.html
+++ b/merch.html
@@ -97,7 +97,15 @@
                         <h2>Kl!n Merch</h2>
                         <h1>Make an Order</h1>
                     </div>
-                
+                <div class="ec-cart-widget"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?44269599&data_platform=code&data_date=2021-03-26" charset="utf-8"></script>
+<script type="text/javascript">Ecwid.init();</script>
+</div>
+                <div id="my-store-44269599"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?44269599&data_platform=code&data_date=2021-03-26" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-44269599");</script>
+</div>
                    
                 </div>
             </div>
