--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="zxx">
 
 <head>
+	   <title>Kl!n Entertainment</title>
     <meta charset="UTF-8">
     <meta name="description" content="Kl!n Entertainment">
     <meta name="keywords" content="Klin Entertainment, Gospel music label, entertain, disciple, events , management, warehouse">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kl!n Entertainment</title>
+	<meta name="google-site-verification" content="YCIizcfzqKUBwj8pVozXXU6AXxFwSAg0AQyK7jNZJAs" />
+ 
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
